--- a/Hippo/UIView/TableViewCell/SelectAgentCell/SelectAgentCell.xib
+++ b/Hippo/UIView/TableViewCell/SelectAgentCell/SelectAgentCell.xib
@@ -23,18 +23,28 @@
                             <constraint firstAttribute="width" constant="100" id="E8y-Gi-1ch"/>
                             <constraint firstAttribute="width" secondItem="vam-PR-GOd" secondAttribute="height" multiplier="1:1" id="bVg-l8-Xai"/>
                         </constraints>
-                        <userDefinedRuntimeAttributes>
-                            <userDefinedRuntimeAttribute type="number" keyPath="_cornerRadius">
-                                <real key="value" value="8"/>
-                            </userDefinedRuntimeAttribute>
-                            <userDefinedRuntimeAttribute type="number" keyPath="hippoBorderWidth">
-                                <real key="value" value="0.5"/>
-                            </userDefinedRuntimeAttribute>
-                            <userDefinedRuntimeAttribute type="color" keyPath="hippoBorderColor">
-                                <color key="value" white="0.66666666669999997" alpha="1" colorSpace="custom" customColorSpace="genericGamma22GrayColorSpace"/>
-                            </userDefinedRuntimeAttribute>
-                        </userDefinedRuntimeAttributes>
                     </imageView>
+                    <view alpha="0.20000000000000001" contentMode="scaleToFill" translatesAutoresizingMaskIntoConstraints="NO" id="bBH-Zc-QNF" customClass="UIControl">
+                        <rect key="frame" x="10" y="90" width="100" height="20"/>
+                        <subviews>
+                            <imageView clipsSubviews="YES" userInteractionEnabled="NO" contentMode="scaleAspectFit" horizontalHuggingPriority="251" verticalHuggingPriority="251" image="info_button_icon_on_navigation_bar" translatesAutoresizingMaskIntoConstraints="NO" id="7NT-vF-ocs">
+                                <rect key="frame" x="40" y="0.0" width="20" height="20"/>
+                                <constraints>
+                                    <constraint firstAttribute="width" secondItem="7NT-vF-ocs" secondAttribute="height" multiplier="1:1" id="Pq3-ux-pdi"/>
+                                </constraints>
+                            </imageView>
+                        </subviews>
+                        <color key="backgroundColor" white="0.0" alpha="1" colorSpace="custom" customColorSpace="genericGamma22GrayColorSpace"/>
+                        <constraints>
+                            <constraint firstItem="7NT-vF-ocs" firstAttribute="centerY" secondItem="bBH-Zc-QNF" secondAttribute="centerY" id="4eT-hH-8Xk"/>
+                            <constraint firstItem="7NT-vF-ocs" firstAttribute="height" secondItem="bBH-Zc-QNF" secondAttribute="height" id="KHd-pK-g19"/>
+                            <constraint firstAttribute="height" constant="20" id="QWO-60-5Qe"/>
+                            <constraint firstItem="7NT-vF-ocs" firstAttribute="centerX" secondItem="bBH-Zc-QNF" secondAttribute="centerX" id="hVB-jE-Pn8"/>
+                        </constraints>
+                        <connections>
+                            <action selector="actionInfoTap" destination="KGk-i7-Jjw" eventType="touchUpInside" id="MbK-QL-tpm"/>
+                        </connections>
+                    </view>
                     <imageView clipsSubviews="YES" userInteractionEnabled="NO" contentMode="scaleAspectFit" horizontalHuggingPriority="251" verticalHuggingPriority="251" translatesAutoresizingMaskIntoConstraints="NO" id="xtg-2t-obw">
                         <rect key="frame" x="100" y="100" width="15" height="15"/>
                         <constraints>
@@ -95,7 +105,10 @@
                     <constraint firstAttribute="trailing" secondItem="MEA-gU-820" secondAttribute="trailing" constant="10" id="Dmz-ZQ-IYG"/>
                     <constraint firstItem="ENq-Jl-DQK" firstAttribute="leading" secondItem="vam-PR-GOd" secondAttribute="trailing" constant="10" id="F89-cN-Wqk"/>
                     <constraint firstAttribute="bottom" secondItem="MEA-gU-820" secondAttribute="bottom" id="HNY-G0-l9r"/>
+                    <constraint firstItem="bBH-Zc-QNF" firstAttribute="bottom" secondItem="vam-PR-GOd" secondAttribute="bottom" id="SJb-aJ-Jte"/>
                     <constraint firstAttribute="trailing" secondItem="ENq-Jl-DQK" secondAttribute="trailing" constant="10" id="W13-U7-OBj"/>
+                    <constraint firstItem="bBH-Zc-QNF" firstAttribute="trailing" secondItem="vam-PR-GOd" secondAttribute="trailing" id="Wjt-NS-jc2"/>
+                    <constraint firstItem="bBH-Zc-QNF" firstAttribute="leading" secondItem="vam-PR-GOd" secondAttribute="leading" id="a2u-FZ-N7V"/>
                     <constraint firstAttribute="bottom" relation="greaterThanOrEqual" secondItem="vam-PR-GOd" secondAttribute="bottom" constant="10" id="hEa-nC-fiT"/>
                     <constraint firstItem="xtg-2t-obw" firstAttribute="bottom" secondItem="vam-PR-GOd" secondAttribute="bottom" constant="5" id="hSg-OW-S9K"/>
                     <constraint firstItem="MEA-gU-820" firstAttribute="leading" secondItem="H2p-sc-9uM" secondAttribute="leading" constant="10" id="kCS-aT-6cm"/>
@@ -118,6 +131,7 @@
         </tableViewCell>
     </objects>
     <resources>
+        <image name="info_button_icon_on_navigation_bar" width="27" height="27"/>
         <image name="starWithShadow" width="36" height="33"/>
     </resources>
 </document>
