--- a/Hippo/UIView/TableViewCell/LeadDataCell/LeadDataTableViewCell.xib
+++ b/Hippo/UIView/TableViewCell/LeadDataCell/LeadDataTableViewCell.xib
@@ -1,38 +1,37 @@
 <?xml version="1.0" encoding="UTF-8"?>
-<document type="com.apple.InterfaceBuilder3.CocoaTouch.XIB" version="3.0" toolsVersion="14490.70" targetRuntime="iOS.CocoaTouch" propertyAccessControl="none" useAutolayout="YES" useTraitCollections="YES" useSafeAreas="YES" colorMatched="YES">
-    <device id="retina4_7" orientation="portrait">
-        <adaptation id="fullscreen"/>
-    </device>
+<document type="com.apple.InterfaceBuilder3.CocoaTouch.XIB" version="3.0" toolsVersion="17701" targetRuntime="iOS.CocoaTouch" propertyAccessControl="none" useAutolayout="YES" useTraitCollections="YES" useSafeAreas="YES" colorMatched="YES">
+    <device id="retina4_7" orientation="portrait" appearance="light"/>
     <dependencies>
         <deployment identifier="iOS"/>
-        <plugIn identifier="com.apple.InterfaceBuilder.IBCocoaTouchPlugin" version="14490.49"/>
+        <plugIn identifier="com.apple.InterfaceBuilder.IBCocoaTouchPlugin" version="17703"/>
+        <capability name="System colors in document resources" minToolsVersion="11.0"/>
         <capability name="documents saved in the Xcode 8 format" minToolsVersion="8.0"/>
     </dependencies>
     <objects>
         <placeholder placeholderIdentifier="IBFilesOwner" id="-1" userLabel="File's Owner"/>
         <placeholder placeholderIdentifier="IBFirstResponder" id="-2" customClass="UIResponder"/>
-        <tableViewCell contentMode="scaleToFill" selectionStyle="none" indentationWidth="10" reuseIdentifier="LeadDataTableViewCell" rowHeight="107" id="KGk-i7-Jjw" customClass="LeadDataTableViewCell" customModule="HippoChat" customModuleProvider="target">
-            <rect key="frame" x="0.0" y="0.0" width="397" height="107"/>
+        <tableViewCell contentMode="scaleToFill" selectionStyle="none" indentationWidth="10" reuseIdentifier="LeadDataTableViewCell" rowHeight="277" id="KGk-i7-Jjw" customClass="LeadDataTableViewCell" customModule="Hippo" customModuleProvider="target">
+            <rect key="frame" x="0.0" y="0.0" width="494" height="277"/>
             <autoresizingMask key="autoresizingMask" flexibleMaxX="YES" flexibleMaxY="YES"/>
             <tableViewCellContentView key="contentView" opaque="NO" clipsSubviews="YES" multipleTouchEnabled="YES" contentMode="center" tableViewCell="KGk-i7-Jjw" id="H2p-sc-9uM">
-                <rect key="frame" x="0.0" y="0.0" width="397" height="106.5"/>
+                <rect key="frame" x="0.0" y="0.0" width="494" height="277"/>
                 <autoresizingMask key="autoresizingMask"/>
                 <subviews>
                     <view contentMode="scaleToFill" translatesAutoresizingMaskIntoConstraints="NO" id="AjU-g1-0Dr">
-                        <rect key="frame" x="8" y="8" width="381" height="98.5"/>
+                        <rect key="frame" x="8" y="8" width="478" height="269"/>
                         <subviews>
                             <view contentMode="scaleToFill" translatesAutoresizingMaskIntoConstraints="NO" id="2Mp-ai-p05">
-                                <rect key="frame" x="0.0" y="0.0" width="381" height="20"/>
+                                <rect key="frame" x="0.0" y="0.0" width="478" height="20"/>
                                 <subviews>
                                     <label opaque="NO" userInteractionEnabled="NO" contentMode="left" verticalHuggingPriority="251" text="Label" textAlignment="natural" lineBreakMode="tailTruncation" baselineAdjustment="alignBaselines" adjustsFontSizeToFit="NO" translatesAutoresizingMaskIntoConstraints="NO" id="f9C-AP-9xG">
-                                        <rect key="frame" x="0.0" y="0.0" width="346" height="20"/>
+                                        <rect key="frame" x="0.0" y="0.0" width="443" height="20"/>
                                         <color key="backgroundColor" white="0.0" alpha="0.0" colorSpace="custom" customColorSpace="genericGamma22GrayColorSpace"/>
                                         <fontDescription key="fontDescription" type="system" pointSize="14"/>
                                         <nil key="textColor"/>
                                         <nil key="highlightedColor"/>
                                     </label>
                                     <label opaque="NO" userInteractionEnabled="NO" contentMode="left" horizontalHuggingPriority="251" verticalHuggingPriority="251" text="Label" textAlignment="natural" lineBreakMode="tailTruncation" baselineAdjustment="alignBaselines" adjustsFontSizeToFit="NO" translatesAutoresizingMaskIntoConstraints="NO" id="Alj-tD-zlb">
-                                        <rect key="frame" x="346" y="0.0" width="35" height="20"/>
+                                        <rect key="frame" x="443" y="0.0" width="35" height="20"/>
                                         <color key="backgroundColor" white="0.0" alpha="0.0" colorSpace="custom" customColorSpace="genericGamma22GrayColorSpace"/>
                                         <fontDescription key="fontDescription" type="system" weight="light" pointSize="14"/>
                                         <nil key="textColor"/>
@@ -51,20 +50,26 @@
                                     <constraint firstItem="Alj-tD-zlb" firstAttribute="top" secondItem="2Mp-ai-p05" secondAttribute="top" id="qhk-Ts-Kdd"/>
                                 </constraints>
                             </view>
+                            <tableView clipsSubviews="YES" contentMode="scaleToFill" alwaysBounceVertical="YES" style="plain" separatorStyle="default" rowHeight="-1" estimatedRowHeight="-1" sectionHeaderHeight="28" sectionFooterHeight="28" translatesAutoresizingMaskIntoConstraints="NO" id="Fm0-mq-WBE">
+                                <rect key="frame" x="0.0" y="29" width="478" height="0.0"/>
+                                <color key="backgroundColor" systemColor="systemBackgroundColor"/>
+                                <constraints>
+                                    <constraint firstAttribute="height" id="HAj-iG-zf5"/>
+                                </constraints>
+                            </tableView>
                             <view contentMode="scaleToFill" translatesAutoresizingMaskIntoConstraints="NO" id="Sjk-z9-QKg">
-                                <rect key="frame" x="0.0" y="25" width="381" height="37"/>
+                                <rect key="frame" x="0.0" y="29" width="478" height="37"/>
                                 <subviews>
                                     <textField opaque="NO" contentMode="scaleToFill" horizontalHuggingPriority="249" contentHorizontalAlignment="left" contentVerticalAlignment="center" minimumFontSize="17" translatesAutoresizingMaskIntoConstraints="NO" id="u7J-TA-5G1">
-                                        <rect key="frame" x="5" y="0.0" width="326" height="37"/>
+                                        <rect key="frame" x="5" y="0.0" width="423" height="37"/>
                                         <constraints>
                                             <constraint firstAttribute="height" constant="37" id="2WJ-Mc-YVW"/>
                                         </constraints>
-                                        <nil key="textColor"/>
                                         <fontDescription key="fontDescription" type="system" pointSize="14"/>
                                         <textInputTraits key="textInputTraits"/>
                                     </textField>
                                     <button opaque="NO" contentMode="scaleToFill" contentHorizontalAlignment="center" contentVerticalAlignment="center" adjustsImageSizeForAccessibilityContentSizeCategory="YES" lineBreakMode="middleTruncation" translatesAutoresizingMaskIntoConstraints="NO" id="kU3-po-xoM">
-                                        <rect key="frame" x="344" y="0.0" width="37" height="37"/>
+                                        <rect key="frame" x="441" y="0.0" width="37" height="37"/>
                                         <constraints>
                                             <constraint firstAttribute="width" secondItem="kU3-po-xoM" secondAttribute="height" id="bFJ-ZJ-OYg"/>
                                         </constraints>
@@ -86,7 +91,7 @@
                                 </constraints>
                             </view>
                             <label opaque="NO" userInteractionEnabled="NO" contentMode="left" horizontalHuggingPriority="251" verticalHuggingPriority="251" text="This field is required." textAlignment="natural" lineBreakMode="tailTruncation" baselineAdjustment="alignBaselines" minimumScaleFactor="0.5" translatesAutoresizingMaskIntoConstraints="NO" id="6MO-4x-sa9">
-                                <rect key="frame" x="0.0" y="64.5" width="381" height="13.5"/>
+                                <rect key="frame" x="0.0" y="68.5" width="478" height="13.5"/>
                                 <fontDescription key="fontDescription" type="system" weight="light" pointSize="11"/>
                                 <nil key="textColor"/>
                                 <nil key="highlightedColor"/>
@@ -94,11 +99,14 @@
                         </subviews>
                         <color key="backgroundColor" white="0.0" alpha="0.0" colorSpace="custom" customColorSpace="genericGamma22GrayColorSpace"/>
                         <constraints>
-                            <constraint firstItem="Sjk-z9-QKg" firstAttribute="top" secondItem="2Mp-ai-p05" secondAttribute="bottom" constant="5" id="079-Z6-EdF"/>
+                            <constraint firstItem="Fm0-mq-WBE" firstAttribute="leading" secondItem="2Mp-ai-p05" secondAttribute="leading" id="8aJ-m7-5fk"/>
                             <constraint firstItem="6MO-4x-sa9" firstAttribute="leading" secondItem="AjU-g1-0Dr" secondAttribute="leading" id="EHP-Wb-SrU"/>
+                            <constraint firstItem="Fm0-mq-WBE" firstAttribute="trailing" secondItem="2Mp-ai-p05" secondAttribute="trailing" id="Efd-PG-cfe"/>
                             <constraint firstAttribute="trailing" secondItem="2Mp-ai-p05" secondAttribute="trailing" id="LPp-F2-xjM"/>
                             <constraint firstAttribute="trailing" secondItem="6MO-4x-sa9" secondAttribute="trailing" id="Pu5-oE-VgA"/>
+                            <constraint firstItem="Fm0-mq-WBE" firstAttribute="top" secondItem="2Mp-ai-p05" secondAttribute="bottom" constant="9" id="VuR-26-iC6"/>
                             <constraint firstItem="6MO-4x-sa9" firstAttribute="top" secondItem="Sjk-z9-QKg" secondAttribute="bottom" constant="2.5" id="WUI-oi-2XH"/>
+                            <constraint firstItem="Sjk-z9-QKg" firstAttribute="top" secondItem="Fm0-mq-WBE" secondAttribute="bottom" id="gcP-8M-e6u"/>
                             <constraint firstAttribute="bottom" relation="greaterThanOrEqual" secondItem="6MO-4x-sa9" secondAttribute="bottom" constant="2" id="oC2-gF-nWY"/>
                             <constraint firstItem="2Mp-ai-p05" firstAttribute="top" secondItem="AjU-g1-0Dr" secondAttribute="top" id="sqN-rp-Ewe"/>
                             <constraint firstAttribute="trailing" secondItem="Sjk-z9-QKg" secondAttribute="trailing" id="sxf-m8-VpI"/>
@@ -116,18 +124,23 @@
             </tableViewCellContentView>
             <connections>
                 <outlet property="buttonSend" destination="kU3-po-xoM" id="z1A-b0-Phh"/>
+                <outlet property="constraintTableHeight" destination="HAj-iG-zf5" id="GmS-gn-2i5"/>
                 <outlet property="constraintValidationTop" destination="WUI-oi-2XH" id="ej2-ts-YQp"/>
                 <outlet property="constraintViewTop" destination="JtH-qI-yzT" id="0Ck-lD-23c"/>
                 <outlet property="labelNoOfQuestions" destination="Alj-tD-zlb" id="rxg-Ye-8tY"/>
                 <outlet property="labelValidationError" destination="6MO-4x-sa9" id="10J-iM-a2Q"/>
+                <outlet property="tableView" destination="Fm0-mq-WBE" id="NSW-SU-4fp"/>
                 <outlet property="titleLabel" destination="f9C-AP-9xG" id="6JM-W7-7Fz"/>
                 <outlet property="valueContainer" destination="Sjk-z9-QKg" id="2RR-z0-LNn"/>
                 <outlet property="valueTextfield" destination="u7J-TA-5G1" id="Laj-Jj-C0p"/>
             </connections>
-            <point key="canvasLocation" x="8.5" y="61.5"/>
+            <point key="canvasLocation" x="369.60000000000002" y="71.514242878560722"/>
         </tableViewCell>
     </objects>
     <resources>
         <image name="tick_green" width="42.5" height="42.5"/>
+        <systemColor name="systemBackgroundColor">
+            <color white="1" alpha="1" colorSpace="custom" customColorSpace="genericGamma22GrayColorSpace"/>
+        </systemColor>
     </resources>
 </document>
