--- a/Hippo/UIView/TableViewCell/UrlCell/UrlTableCell.xib
+++ b/Hippo/UIView/TableViewCell/UrlCell/UrlTableCell.xib
@@ -10,7 +10,7 @@
     <objects>
         <placeholder placeholderIdentifier="IBFilesOwner" id="-1" userLabel="File's Owner"/>
         <placeholder placeholderIdentifier="IBFirstResponder" id="-2" customClass="UIResponder"/>
-        <tableViewCell contentMode="scaleToFill" selectionStyle="default" indentationWidth="10" rowHeight="70" id="KGk-i7-Jjw" customClass="UrlTableCell" customModule="Hippo" customModuleProvider="target">
+        <tableViewCell contentMode="scaleToFill" selectionStyle="none" indentationWidth="10" reuseIdentifier="UrlTableCell" rowHeight="70" id="KGk-i7-Jjw" customClass="UrlTableCell" customModule="Hippo" customModuleProvider="target">
             <rect key="frame" x="0.0" y="0.0" width="355" height="70"/>
             <autoresizingMask key="autoresizingMask" flexibleMaxX="YES" flexibleMaxY="YES"/>
             <tableViewCellContentView key="contentView" opaque="NO" clipsSubviews="YES" multipleTouchEnabled="YES" contentMode="center" tableViewCell="KGk-i7-Jjw" id="H2p-sc-9uM">
@@ -18,30 +18,36 @@
                 <autoresizingMask key="autoresizingMask"/>
                 <subviews>
                     <label opaque="NO" userInteractionEnabled="NO" contentMode="left" horizontalHuggingPriority="251" verticalHuggingPriority="251" text="Label" textAlignment="natural" lineBreakMode="tailTruncation" baselineAdjustment="alignBaselines" adjustsFontSizeToFit="NO" translatesAutoresizingMaskIntoConstraints="NO" id="aFQ-a7-rJp">
-                        <rect key="frame" x="10" y="5" width="285" height="60"/>
+                        <rect key="frame" x="10" y="5" width="295" height="60"/>
+                        <color key="backgroundColor" white="0.0" alpha="0.0" colorSpace="custom" customColorSpace="genericGamma22GrayColorSpace"/>
                         <fontDescription key="fontDescription" type="system" pointSize="17"/>
                         <nil key="textColor"/>
                         <nil key="highlightedColor"/>
                     </label>
                     <button opaque="NO" contentMode="scaleToFill" contentHorizontalAlignment="center" contentVerticalAlignment="center" lineBreakMode="middleTruncation" translatesAutoresizingMaskIntoConstraints="NO" id="UbE-7A-3d1">
-                        <rect key="frame" x="305" y="5" width="40" height="40"/>
+                        <rect key="frame" x="315" y="20" width="30" height="30"/>
                         <constraints>
                             <constraint firstAttribute="width" secondItem="UbE-7A-3d1" secondAttribute="height" multiplier="1:1" id="Fiy-Av-xaQ"/>
-                            <constraint firstAttribute="width" constant="40" id="Jjg-Qn-xAs"/>
+                            <constraint firstAttribute="width" constant="30" id="Jjg-Qn-xAs"/>
                         </constraints>
                         <state key="normal" image="cancel_icon"/>
+                        <connections>
+                            <action selector="action_crossbtn" destination="KGk-i7-Jjw" eventType="touchUpInside" id="nnC-gE-KvW"/>
+                        </connections>
                     </button>
                 </subviews>
+                <color key="backgroundColor" white="0.0" alpha="0.0" colorSpace="custom" customColorSpace="genericGamma22GrayColorSpace"/>
                 <constraints>
                     <constraint firstAttribute="trailing" secondItem="UbE-7A-3d1" secondAttribute="trailing" constant="10" id="3Mk-oD-5cV"/>
+                    <constraint firstItem="UbE-7A-3d1" firstAttribute="centerY" secondItem="aFQ-a7-rJp" secondAttribute="centerY" id="PwV-7a-ZIt"/>
                     <constraint firstItem="aFQ-a7-rJp" firstAttribute="leading" secondItem="H2p-sc-9uM" secondAttribute="leading" constant="10" id="UA2-G0-ik1"/>
-                    <constraint firstItem="UbE-7A-3d1" firstAttribute="top" secondItem="aFQ-a7-rJp" secondAttribute="top" id="XaA-UA-Xsf"/>
                     <constraint firstItem="aFQ-a7-rJp" firstAttribute="top" secondItem="H2p-sc-9uM" secondAttribute="top" constant="5" id="bwd-F0-egI"/>
                     <constraint firstItem="UbE-7A-3d1" firstAttribute="leading" secondItem="aFQ-a7-rJp" secondAttribute="trailing" constant="10" id="eyg-nD-Wnn"/>
                     <constraint firstAttribute="bottom" secondItem="aFQ-a7-rJp" secondAttribute="bottom" constant="5" id="vqc-Ed-T2o"/>
                 </constraints>
             </tableViewCellContentView>
             <viewLayoutGuide key="safeArea" id="njF-e1-oar"/>
+            <color key="backgroundColor" white="0.0" alpha="0.0" colorSpace="custom" customColorSpace="genericGamma22GrayColorSpace"/>
             <connections>
                 <outlet property="button_Cross" destination="UbE-7A-3d1" id="XF9-LK-eZp"/>
                 <outlet property="label_Url" destination="aFQ-a7-rJp" id="2pT-88-IQV"/>
